--- a/Peter_smith_exercices/4_Chapter, Data plots/Cap_4_exercices.Rmd
+++ b/Peter_smith_exercices/4_Chapter, Data plots/Cap_4_exercices.Rmd
@@ -24,8 +24,8 @@ months <- c(33,8,5,12,41,8,11,39,16,14,89,81,28,88,1,29,3,46,1,54,194,24,2,39,22
 ```{r}
 ## Plotting position
 
-p = (ministers - 0.5)/length(ministers)
-
+p <- (ministers - 0.5)/length(ministers)
+head(p)
 ```
 
 #### Data Plot
@@ -62,3 +62,72 @@ and
 
 $$0.4137-2\sqrt{\frac{0.4137\left(1-0.4137\right)}{29}}=0.2308$$
 
+```{r}
+
+knitr::include_graphics("4_2.PNG")
+
+```
+
+#### Required data
+
+```{r}
+## Stanford Heart Transplat Data
+
+## Reading data
+heart <- read.csv("heart_data.csv", header=T,sep=";")
+head(heart)
+
+```
+#### Cleaning the censored data
+
+```{r}
+
+heart_cens <- subset(heart, Cens == 1)
+attach(heart_cens)
+heart_cens
+```
+
+
+#### Plotting position calculations
+
+```{r}
+
+## Plotting position
+
+patients <- seq(1:length(Days))
+p <- (patients - 0.5)/length(patients)
+head(p)
+
+```
+
+#### Data Plot
+
+```{r}
+## Empirical survivor plot
+
+Days <- sort(Days)
+plot(Days,1-p, main="Empirical Survival Function", xlab = "
+Days since heart transplant", ylab = "Survival Probability")
+
+```
+
+#### Estimate probablity of survival beyond full 3 years 
+
+```{r}
+## Looking on the data greater than 1000
+
+sum(Days > 1000)
+
+```
+
+Then by the definition 1.3:
+
+$$S_{45}\left(2\right)=\frac{1}{45}\sum \:_{i=1}^{45}\:I\left(2,\infty \:\right)\left(Y_i\right)=\frac{2}{45}=0.0444$$
+#### Confidence interval
+
+The approximate confidence interval based in two standard error is:
+
+$$0.4444+2\sqrt{\frac{0.4444\left(1-0.4444\right)}{45}}=0.5925$$
+and
+
+$$0.4444-\sqrt{\frac{0.4444\left(1-0.4444\right)}{45}}=0.3703$$
