--- a/Peter_smith_exercices/4_Chapter, Data plots/Cap_4_exercices.Rmd
+++ b/Peter_smith_exercices/4_Chapter, Data plots/Cap_4_exercices.Rmd
@@ -46,12 +46,12 @@ $$S_n\left(y\right)=\frac{number\:of\:observations\:>y}{n}=\frac{1}{n}\sum _{i=1
 
 then:
 
-$$S_{29}\left(12\right)=\frac{1}{29}\sum _{i=1}^n\:I\left(12,\infty \right)\left(Y_i\right)=\frac{12}{29}\:=\:0.4137$$
+$$S_{29}\left(17\right)=\frac{1}{29}\sum _{i=1}^n\:I\left(12,\infty \right)\left(Y_i\right)=\frac{12}{29}\:=\:0.4137$$
 #### Confidence interval
 
 And the approximate confidence interval based in two standard error is:
 
-$$S_{29}\left(12\right)\frac{+}{ }2\sqrt{\frac{S_{29}\left(12\right)\left(1-S_{29}\left(12\right)\right)}{n}}$$
+$$S_{29}\left(17\right)\frac{+}{ }2\sqrt{\frac{S_{29}\left(12\right)\left(1-S_{29}\left(12\right)\right)}{n}}$$
 
 then
 
@@ -122,7 +122,7 @@ sum(Days > 1000)
 
 Then by the definition 1.3:
 
-$$S_{45}\left(2\right)=\frac{1}{45}\sum \:_{i=1}^{45}\:I\left(2,\infty \:\right)\left(Y_i\right)=\frac{2}{45}=0.0444$$
+$$S_{45}\left(43\right)=\frac{1}{45}\sum \:_{i=1}^{45}\:I\left(2,\infty \:\right)\left(Y_i\right)=\frac{2}{45}=0.0444$$
 #### Confidence interval
 
 The approximate confidence interval based in two standard error is:
@@ -130,4 +130,60 @@ The approximate confidence interval based in two standard error is:
 $$0.4444+2\sqrt{\frac{0.4444\left(1-0.4444\right)}{45}}=0.5925$$
 and
 
-$$0.4444-\sqrt{\frac{0.4444\left(1-0.4444\right)}{45}}=0.3703$$
+$$0.4444-2\sqrt{\frac{0.4444\left(1-0.4444\right)}{45}}=0.2962$$
+```{r}
+
+knitr::include_graphics("4_3.PNG")
+
+```
+The defitnion 4.6 says that the hazard plot is given by:
+
+$$\left(\alpha _i,y_{\left(j\right)}\right)$$
+
+Where
+
+$$\alpha _j=\sum \:_{i=1}^j\left(\frac{1}{n-i+1}\right)$$
+```{r}
+alpha <-c()
+sumatory <- c()
+
+for(j in 1:length(Days)){
+  
+  for(i in 1:j){
+    
+    sumatory[i]<- (1/(length(Days)-i+1))
+    
+  }
+  alpha[j]<- sum(sumatory)
+  sumatory <- 0
+}
+
+```
+
+
+
+```{r}
+
+plot(Days,alpha, main="Hazard Plot", xlab = "
+Days since heart transplant", ylab = "Hazard plot score")
+```
+
+```{r}
+
+knitr::include_graphics("4_3_1.PNG")
+
+```
+knowing that
+
+$$H_{n\left(y\right)}=-ln\left(S_n\left(y\right)\right)$$
+We have that:
+
+$$ H_{45}\left(43\right)=-ln\left(0.0444\right)=3.1145$$
+
+
+```{r}
+
+knitr::include_graphics("4_3_2.PNG")
+
+```
+
