--- a/Peter_smith_exercices/4_Chapter, Data plots/Cap_4_exercices.Rmd
+++ b/Peter_smith_exercices/4_Chapter, Data plots/Cap_4_exercices.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Chapter 4. Data Plots Peter smith"
-output: html_notebook
+output: pdf_document
 ---
 ```{r}
 
@@ -8,7 +8,7 @@ knitr::include_graphics("4_1.PNG")
 
 ```
 
-#### Required data
+### Required data
 
 ```{r}
 
@@ -19,7 +19,7 @@ months <- c(33,8,5,12,41,8,11,39,16,14,89,81,28,88,1,29,3,46,1,54,194,24,2,39,22
 
 ```
 
-#### Plotting position calculations
+### Plotting position calculations
 
 ```{r}
 ## Plotting position
@@ -28,7 +28,7 @@ p <- (ministers - 0.5)/length(ministers)
 head(p)
 ```
 
-#### Data Plot
+### Data Plot
 
 ```{r}
 ## Empirical survivor plot
@@ -38,7 +38,7 @@ data <- as.data.frame(cbind(months,1-p))
 plot(months,1-p, main="Empirical Survival Function", xlab = "Months in office", ylab = "Survival Probability")
 
 ```
-#### Estimate probablity of survival beyond full 3 years 
+### Estimate probablity of survival beyond full 3 years 
 
 Knowing that the estimate probability of the survival fucntion is giving by
 
@@ -47,7 +47,8 @@ $$S_n\left(y\right)=\frac{number\:of\:observations\:>y}{n}=\frac{1}{n}\sum _{i=1
 then:
 
 $$S_{29}\left(17\right)=\frac{1}{29}\sum _{i=1}^n\:I\left(12,\infty \right)\left(Y_i\right)=\frac{12}{29}\:=\:0.4137$$
-#### Confidence interval
+### Confidence interval
+
 
 And the approximate confidence interval based in two standard error is:
 
@@ -68,7 +69,7 @@ knitr::include_graphics("4_2.PNG")
 
 ```
 
-#### Required data
+### Required data
 
 ```{r}
 ## Stanford Heart Transplat Data
@@ -78,7 +79,7 @@ heart <- read.csv("heart_data.csv", header=T,sep=";")
 head(heart)
 
 ```
-#### Cleaning the censored data
+### Cleaning the censored data
 
 ```{r}
 
@@ -88,7 +89,7 @@ heart_cens
 ```
 
 
-#### Plotting position calculations
+### Plotting position calculations
 
 ```{r}
 
@@ -100,7 +101,7 @@ head(p)
 
 ```
 
-#### Data Plot
+### Data Plot
 
 ```{r}
 ## Empirical survivor plot
@@ -111,7 +112,7 @@ Days since heart transplant", ylab = "Survival Probability")
 
 ```
 
-#### Estimate probablity of survival beyond full 3 years 
+### Estimate probablity of survival beyond full 3 years 
 
 ```{r}
 ## Looking on the data greater than 1000
@@ -173,6 +174,7 @@ Days since heart transplant", ylab = "Hazard plot score")
 knitr::include_graphics("4_3_1.PNG")
 
 ```
+
 knowing that
 
 $$H_{n\left(y\right)}=-ln\left(S_n\left(y\right)\right)$$
