--- a/Peter_smith_exercices/4_Chapter, Data plots/Cap_4_exercices.Rmd
+++ b/Peter_smith_exercices/4_Chapter, Data plots/Cap_4_exercices.Rmd
@@ -2,6 +2,13 @@
 title: "Chapter 4. Data Plots Peter smith"
 output: pdf_document
 ---
+
+### Required libraries
+```{r}
+
+library(matlib)
+```
+
 ```{r}
 
 knitr::include_graphics("4_1.PNG")
@@ -9,6 +16,8 @@ knitr::include_graphics("4_1.PNG")
 ```
 
 ### Required data
+
+To facilitate the calculations, we will plot the empirical survival function, first creating the vectors that store the data.
 
 ```{r}
 
@@ -40,19 +49,19 @@ plot(months,1-p, main="Empirical Survival Function", xlab = "Months in office", 
 ```
 ### Estimate probablity of survival beyond full 3 years 
 
-Knowing that the estimate probability of the survival fucntion is giving by
+Knowing that the estimate probability of the survival fucntion is giving by:
 
 $$S_n\left(y\right)=\frac{number\:of\:observations\:>y}{n}=\frac{1}{n}\sum _{i=1}^n\:I\left(y,\infty \right)\left(Y_i\right)$$
 
 then:
 
-$$S_{29}\left(17\right)=\frac{1}{29}\sum _{i=1}^n\:I\left(12,\infty \right)\left(Y_i\right)=\frac{12}{29}\:=\:0.4137$$
+$$S_{29}\left(17\right)=\frac{1}{29}\sum _{i=1}^n\:I\left(17,\infty \right)\left(Y_i\right)=\frac{12}{29}\:=\:0.4137$$
 ### Confidence interval
 
 
 And the approximate confidence interval based in two standard error is:
 
-$$S_{29}\left(17\right)\frac{+}{ }2\sqrt{\frac{S_{29}\left(12\right)\left(1-S_{29}\left(12\right)\right)}{n}}$$
+$$S_{29}\left(17\right)\frac{+}{ }2\sqrt{\frac{S_{29}\left(17\right)\left(1-S_{29}\left(17\right)\right)}{29}}$$
 
 then
 
@@ -76,18 +85,10 @@ knitr::include_graphics("4_2.PNG")
 
 ## Reading data
 heart <- read.csv("heart_data.csv", header=T,sep=";")
+attach(heart)
 head(heart)
 
 ```
-### Cleaning the censored data
-
-```{r}
-
-heart_cens <- subset(heart, Cens == 1)
-attach(heart_cens)
-heart_cens
-```
-
 
 ### Plotting position calculations
 
@@ -107,12 +108,12 @@ head(p)
 ## Empirical survivor plot
 
 Days <- sort(Days)
-plot(Days,1-p, main="Empirical Survival Function", xlab = "
+plot(Days,1-p, main="Empirical S(t) Heart transplant", xlab = "
 Days since heart transplant", ylab = "Survival Probability")
 
 ```
 
-### Estimate probablity of survival beyond full 3 years 
+### Estimate probablity of survival beyond 1000 days
 
 ```{r}
 ## Looking on the data greater than 1000
@@ -123,21 +124,41 @@ sum(Days > 1000)
 
 Then by the definition 1.3:
 
-$$S_{45}\left(43\right)=\frac{1}{45}\sum \:_{i=1}^{45}\:I\left(2,\infty \:\right)\left(Y_i\right)=\frac{2}{45}=0.0444$$
+$$S_{69}\left(61\right)=\frac{1}{69}\sum \:_{i=1}^{69}\:I\left(61,\infty \:\right)\left(Y_i\right)=\frac{2}{69}=0.1159$$
 #### Confidence interval
 
 The approximate confidence interval based in two standard error is:
 
-$$0.4444+2\sqrt{\frac{0.4444\left(1-0.4444\right)}{45}}=0.5925$$
+$$0.1159+2\sqrt{\frac{0.1159\left(1-0.1159\right)}{69}}=0.1929$$
 and
 
-$$0.4444-2\sqrt{\frac{0.4444\left(1-0.4444\right)}{45}}=0.2962$$
+$$0.1159-2\sqrt{\frac{0.1159\left(1-0.1159\right)}{69}}=0.0388$$
 ```{r}
 
 knitr::include_graphics("4_3.PNG")
 
 ```
 The defitnion 4.6 says that the hazard plot is given by:
+
+
+```{r}
+
+k <- seq(69,1)
+k_inv <-c()
+
+for (i in 1:69){
+  if(Cens[i] == 0){
+    k_inv[i] <- 0
+  }else{
+    k_inv[i] <- round(1/i,5)
+  }
+}
+
+
+
+cbind(Days,Cens, k, k_inv)
+```
+
 
 $$\left(\alpha _i,y_{\left(j\right)}\right)$$
 
@@ -164,7 +185,6 @@ for(j in 1:length(Days)){
 
 
 ```{r}
-
 plot(Days,alpha, main="Hazard Plot", xlab = "
 Days since heart transplant", ylab = "Hazard plot score")
 ```
@@ -178,9 +198,10 @@ knitr::include_graphics("4_3_1.PNG")
 knowing that
 
 $$H_{n\left(y\right)}=-ln\left(S_n\left(y\right)\right)$$
+
 We have that:
 
-$$ H_{45}\left(43\right)=-ln\left(0.0444\right)=3.1145$$
+$$ H_{69}\left(61\right)=-ln\left(0.0444\right)=3.1169$$
 
 
 ```{r}
