--- a/Moore_applied_survival_analysis_R/Chapter_10.Rmd
+++ b/Moore_applied_survival_analysis_R/Chapter_10.Rmd
@@ -289,7 +289,7 @@ lines(surv1.vec ~ tt.vec)
 age <- pharmacoSmoking$age
 employment <- pharmacoSmoking$employment
 model.pharm.coxph <- coxph(Surv(ttr, relapse) ~ grp + age + employment)
-summary(modelAll2.coxph)
+summary(model.pharm.coxph)
 ```
 We may include these covariates in a Weibull model
 as follows:
