Homewoek finished cap1, cap4, cap6, cap8 Peter smith

--- a/Peter_smith_exercices/6_Prodcut limit estimator/Cap_6.Rmd
+++ b/Peter_smith_exercices/6_Prodcut limit estimator/Cap_6.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Chapter 6. Product Limit stimator Peter smith"
-output: html_notebook
+output: word_document
 ---
 
 ### Required libraries
