--- a/Martin lectures/cox_models.Rmd
+++ b/Martin lectures/cox_models.Rmd
@@ -14,7 +14,7 @@ data(stanford2)
 head(stanford2)
 
 ```
-
+### Making a factor variable related to the Age > 40
 
 ```{r}
 
@@ -24,6 +24,8 @@ heart <- cbind(heart, Over40)
 heart$Over40 <- as.factor(heart$Over40)
 
 ```
+
+### Making a factor variable related to T5 mismatchlevel 0,1,2
 
 
 ```{r}
@@ -50,13 +52,14 @@ heart$misMatchLevel <- as.factor(heart$misMatchLevel)
 
 ```
 
+### summary of the data
 
 ```{r}
 summary(heart)
 ```
+### Cox model for the Over40 and the mismatch level
+
 ```{r}
-
-
 cox.mod <- coxph(Surv(heart$time, heart$status)~heart$Over40 + heart$misMatchLevel)
 summary(cox.mod)
 ```
@@ -65,16 +68,84 @@ At a given instant in time, someone who is over 40 is 1.7249 time as as likely t
 
 At a given instant in time, someone who is over 40 is 72.49 % time as as likely to die as someone who is under 40 adjusting for mismatch level
 
+### Cox model for the Over40
+
+
 ```{r}
 cox.mod2 <- coxph(Surv(heart$time, heart$status)~ heart$Over40)
 ```
+
+### Analysing model differences
 
 
 ```{r}
 anova(cox.mod2, cox.mod, test = "LRT")
 ```
+When P chi is too high adding a coovarible is not statistically significant
+
+### Cheking another model.
+
 ```{r}
 cox.num <- coxph(Surv(heart$time, heart$status)~ heart$age +heart$t5)
 summary(cox.num)
 ```
-at a given instant in time, the probability of dying for someone who is 1 year older is 3% higher than someone who is 1 year younger adjusting for t5 score
+At a given instant in time, the probability of dying for someone who is 1 year older is 3% higher than someone who is 1 year younger adjusting for t5 score
+
+
+### Checking the COX PH assumptions
+
+#### Chekign linearity (For the model that used NUM X's)
+#### usign martingale residuales
+
+```{r}
+
+plot(predict(cox.num), residuals(cox.num, type="martingale"),
+     xlab= "Fitted values", ylab ="Martingale residuals",
+     main="residual Plot", las = 1)
+### add a line ax y = residual = 0
+abline(h=0)
+
+# fir a smoother thru the points
+
+lines(smooth.spline(predict(cox.num), residuals(cox.num, type="martingale")), col = "red")
+```
+
+
+```{r}
+### and checking linearity using deviance residuals
+
+plot(predict(cox.num), residuals(cox.num, type="deviance"))
+abline(h=0)
+
+lines(smooth.spline(predict(cox.num), residuals(cox.num, type="deviance")), col = "red")
+```
+
+appears to be a non-linear... we can address this categorizing the non linear variable, transforming the variable or any other method, stratifying the variable or making it time dependent
+
+
+#### 2. Proportional Hazard
+
+Ho: hazards are prop Ha: hazards are not prop
+will return test for each X,a nd for overall model
+
+```{r}
+cox.zph(cox.num)
+```
+All are larger than 5% so probably we should reject all of them
+
+
+```{r}
+par(mfrow=c(2,1))
+plot(cox.zph(cox.num))
+```
+```{r}
+par(mfrow=c(1,1))
+plot(cox.zph(cox.num)[1])
+abline(h=0, col=2)
+```
+```{r}
+par(mfrow=c(1,1))
+plot(cox.zph(cox.num)[2])
+abline(h=0, col=2)
+```
+The red line fit a lot the CI most of th time, so we can say that fits the proportional hazard model
