--- a/Scripts_survival_notes/MVR.Rmd
+++ b/Scripts_survival_notes/MVR.Rmd
@@ -70,5 +70,37 @@ for ( i in 1:12){
   
 }
 rt
+
 ```
+
+```{r}
+EV <- rt + rep
+EV
+```
+
+
+```{r}
+
+sumatoria <- c()
+
+
+for ( i in 1:12){
+  
+  
+  sumatoria <- sum(St[-1:-i])
+  
+}
+
+```
+
+
+```{r}
+maleEV <- c(73.3, 74.2, 74.7, 75.2, 75.9, 76.7, 78.3,81.5,86.5,93.5)
+
+age <- c(0,10,20,30,40,50,60,70,80,90)
+
+
+```
+
+
 
