--- a/Taller 2/Taller2.Rmd
+++ b/Taller 2/Taller2.Rmd
@@ -8,33 +8,184 @@ prostatic <- read.csv("prostatic.csv", header = T, sep=",")
 attach(prostatic);
 head(prostatic)
 ```
-
 ```{r}
-index <- order(time)
-prostatic <- prostatic[index,]
+summary(treatment1$time)
 ```
 
-
 ```{r}
-len <- length(prostatic[,1])
-patient <- seq(1:len)
-prostatic <- cbind(prostatic, patient)
+par(mfrow=c(1,2))
+hist(time)
+boxplot(time)
 ```
 
-
-
 ```{r}
-p_score <- 1 - (patient-0.5)/len
-prostatic <- cbind(prostatic, p_score)
-head(prostatic)
-attach(prostatic);
+
+treatment1 <- subset(prostatic, treatment == 1)
+
+treatment2 <- subset(prostatic, treatment == 2)
 
 ```
 
 
+
 ```{r}
-plot(time,p_score)
+par(mfrow=c(2,2))
+
+hist(treatment1$time)
+boxplot(treatment1$time)
+
+
+hist(treatment2$time)
+boxplot(treatment2$time)
 
 ```
 
+
+
+```{r}
+riesgo.can <- muhaz(time,status)
+plot(riesgo.can)
+```
+
+
+```{r}
+# Estimador K-M Grupos
+
+ekm <- survfit(Surv(time,status)~treatment)
+summary(ekm)
+plot(ekm,lty=c(2,1),xlab="Tiempo (semanas)", ylab= "S(t) estimada")
+legend(1,0.3,lty=c(2,1), c("treament1", "treament2"), lwd=1, bty="n")
+
+```
+
+```{r}
+
+ekm1 <- survfit(Surv(treatment1$time,treatment1$status)~1)
+summary(ekm1)
+ekm2 <- survfit(Surv(treatment2$time,treatment2$status)~1)
+summary(ekm2)
+```
+
+
+```{r}
+par(mfrow=c(1,2))
+plot(ekm1)
+plot(ekm2)
+```
+
+
+```{r}
+ena <- survfit(Surv(time,status)~treatment, type = "fh")
+summary(ena)
+
+plot(ena,lty=c(2,1),xlab="Tiempo (semanas)", ylab= "S(t) estimada")
+legend(1,0.3,lty=c(2,1), c("treament1", "treament2"), lwd=1, bty="n")
+
+```
+
+
+```{r}
+# Estimador NA Grupo de Control, Fleming and Harrington = fh
+
+ena1 <- survfit(Surv(treatment1$time,treatment1$status)~1, type = "fh")
+summary(ena1)
+
+# Estimador NA Grupo de Eseroide, Fleming and Harrington = fh
+
+ena2 <- survfit(Surv(treatment2$time,treatment2$status)~1, type = "fh")
+summary(ena2)
+
+```
+
+
+
+```{r}
+
+par(mfrow=c(1,2))
+plot(ena1,xlab="Tiempo (semanas)", ylab= "S(t) estimada")
+plot(ena2,xlab="Tiempo (semanas)", ylab= "S(t) estimada")
+```
+
+
+```{r}
+index <- order(treatment1$time)
+treatment1 <- treatment1[index,]
+
+index <- order(treatment2$time)
+treatment2 <- treatment2[index,]
+```
+
+```{r}
+len <- length(treatment1$time)
+i <- seq(1:len)
+p_score1 <- 1- ((i-0.5)/len)
+```
+
+```{r}
+len <- length(treatment2$time)
+i <- seq(1:len)
+p_score2 <- 1- ((i-0.5)/len)
+```
+
+
+
+```{r}
+plot(treatment1$time, p_score1, col = "red", ylab= "Plotting position S(t)", xlab="Time",)
+points(treatment2$time, p_score2, col = "blue")
+legend("bottomleft", legend=c("Treatment 1", "Treatment 2"), col = c("red","blue"), pch = 19, bty = "n")
+```
+
+
+```{r}
+
+par(mfrow=c(1,2))
+
+plot(log(treatment1$time), log(-1*log(p_score1)), col = "red", ylab= "Plotting position S(t)", xlab="Time", main =" Weibull")
+
+points(log(treatment2$time), log(-1*log(p_score2)), col = "blue")
+
+legend("bottomleft", legend=c("Treatment 1", "Treatment 2"), col = c("red","blue"), pch = 19, bty = "n")
+
+
+plot(log(treatment1$time), -1*log(p_score1), col = "red", ylab= "Plotting position S(t)", xlab="Time", main =" exponential")
+
+points(log(treatment2$time), -1*log(p_score2), col = "blue")
+
+legend("bottomleft", legend=c("Treatment 1", "Treatment 2"), col = c("red","blue"), pch = 19, bty = "n")
+
+
+plot(log(treatment1$time), qnorm(p_score1), col = "red", ylab= "Plotting position S(t)", xlab="Time", main =" Lognormal")
+
+points(log(treatment2$time), qnorm(p_score2), col = "blue")
+
+legend("bottomleft", legend=c("Treatment 1", "Treatment 2"), col = c("red","blue"), pch = 19, bty = "n")
+```
+
+
+```{r}
+
+logT1 <- log(ekm1$time)
+logT2 <- log(ekm2$time)
+
+logLogSurv1 <- log(-log(ekm1$surv))
+logSurv1 <- -log(ekm1$surv)
+qnormSurv1 <- qnorm(ekm1$surv)
+
+
+logLogSurv2 <- log(-log(ekm2$surv))
+logSurv2 <- -log(ekm2$surv)
+qnormSurv2 <- qnorm(ekm2$surv)
+
+```
+
+```{r}
+
+
+plot(log(ekm1$time), log(-1*log(ekm1$surv)), col = "red", ylab= "Plotting position S(t)", xlab="Time", main =" Weibull",ylim= c(-5,5))
+
+points(log(treatment1$time), log(-1*log(p_score1)), col = "blue")
+
+legend("bottomleft", legend=c("ekm", "empirical"), col = c("red","blue"), pch = 19, bty = "n")
+
+```
 
