--- a/Taller 2/Taller2.Rmd
+++ b/Taller 2/Taller2.Rmd
@@ -2,6 +2,11 @@
 title: "Survival times of prostatic cancer"
 output: html_notebook
 ---
+```{r}
+library(survival)
+library(muhaz)
+```
+
 
 ```{r}
 prostatic <- read.csv("prostatic.csv", header = T, sep=",")
@@ -37,10 +42,83 @@ boxplot(treatment2$time)
 
 ```
 
+```{r}
+un1 <- sort(unique(treatment1$time))
+un2 <- sort(unique(treatment2$time))
+
+len <- length(un1)
+
+
+St1 <- c()
+
+for ( i in 1:len){
+  
+  St1[i] <- sum(treatment1$time > un1[i])
+  
+}
+
+
+St1 <- St1/len
+
+
+len <- length(un2)
+
+
+St2 <- c()
+
+for ( i in 1:len){
+  
+  St2[i] <- sum(treatment2$time > un2[i])
+  
+}
+
+
+St2 <- St2/len
+```
+
+```{r}
+par(mfrow=c(1,2))
+
+plot(un1,St1)
+plot(un2,St2)
+```
 
 
 ```{r}
-riesgo.can <- muhaz(time,status)
+
+rt0_1 <- sum(St1[-1])/St1[1]
+rt0_2 <- sum(St1[-1])/St2[1]
+cbind(rt0_1, rt0_2)
+
+
+```
+
+```{r}
+rt1 <- c()
+
+
+for ( i in 1:len){
+  
+  rt1[i] <- sum(St1[-1:-i])/St1[i]
+  
+}
+
+rt2 <- c()
+
+
+for ( i in 1:len){
+  
+  rt2[i] <- sum(St2[-1:-i])/St2[i]
+  
+}
+
+
+cbind(rt1,rt2)
+```
+
+
+```{r}
+riesgo.can <- muhaz(time,status, max.time = 70)
 plot(riesgo.can)
 ```
 
@@ -135,7 +213,7 @@ legend("bottomleft", legend=c("Treatment 1", "Treatment 2"), col = c("red","blue
 
 ```{r}
 
-par(mfrow=c(1,2))
+par(mfrow=c(1,3))
 
 plot(log(treatment1$time), log(-1*log(p_score1)), col = "red", ylab= "Plotting position S(t)", xlab="Time", main =" Weibull")
 
@@ -184,5 +262,69 @@ points(log(treatment1$time), log(-1*log(p_score1)), col = "blue")
 
 legend("bottomleft", legend=c("ekm", "empirical"), col = c("red","blue"), pch = 19, bty = "n")
 
+```
+
+```{r}
+logrank <- survdiff(Surv(time,status)~ treatment)
+logrank
+```
+
+### cox
+
+```{r}
+cox <- coxph(Surv(time,status) ~ tomour)
+summary(cox)
+```
+```{r}
+cox1 <- coxph(Surv(time,status) ~ tomour + haem)
+summary(cox1)
+```
+```{r}
+cox2 <- coxph(Surv(time,status) ~ tomour + haem +gleason)
+summary(cox2)
+```
+
+
+```{r}
+cox3 <- coxph(Surv(time,status) ~ tomour + haem + gleason +age)
+summary(cox3)
+```
+```{r}
+anova(cox, cox1, cox2, cox3, test = "LRT")
+```
+
+```{r}
+cox4 <- coxph(Surv(time,status) ~ treatment + age)
+summary(cox4)
+```
+
+
+```{r}
+
+plot(predict(cox4), residuals(cox4),
+     xlab= "Fitted values", ylab ="Martingale residuals",
+     main="residual Plot", las = 1)
+### add a line ax y = residual = 0
+
+# fir a smoother thru the points
+
+lines(smooth.spline(predict(cox4), residuals(cox4)), col = "red")
+```
+```{r}
+
+k <- residuals(cox4,type="martingale")
+
+
+cox.zph(cox3,transform="rank")
+
+```
+
+```{r}
+plot(cox.zph(cox4,transform="identity"))
+```
+
+```{r}
+
+plot(k~age)
 ```
 
